--- a/app/styles/application.css
+++ b/app/styles/application.css
@@ -1,4 +1,44 @@
+body {
+  background-color: #8b8bcb;
+}
+
 #app {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+header {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: #E0E0FF;
+  padding-bottom: 20px;
+  color: #2e2ea2;
+}
+
+button {
+  border: none;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  padding: 8px 36px;
+  background-color: #B2B2FF; /* A light purplish blue */
+  color: white;
+  font-size: 18px;
+}
+
+button:active {
+  background-color: #8b8bcb;
+}
+
+#week {
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: row;
@@ -7,18 +47,16 @@
   align-items: center;
   -webkit-justify-content: center;
   justify-content: center;
-  flex:;
-
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
-/*#header {
-  display: -webkit-flex;
-  display: flex;
-  order: 0;
-  flex-grow: 4;
-  flex-basis: 3em;
-}*/
-
-a:hover {
-  color: #27552e;
+.days {
+  padding: 15px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+}
+.days:hover {
+  background-color: #b9b9e0;
 }
