--- a/app/styles/application.css
+++ b/app/styles/application.css
@@ -56,6 +56,7 @@ button:active {
   border-style: solid;
   border-width: 1px;
   border-color: black;
+  text-align: center;
 }
 .days:hover {
   background-color: #b9b9e0;
